@@ -41,6 +41,7 @@ void  on_bootproto_changed         (GtkWidget*, gpointer);
 void  on_connection_cancel_clicked (GtkWidget*, gpointer);
 void  on_connection_ok_clicked     (GtkWidget*, gpointer);
 void  on_detect_modem_clicked      (GtkWidget*, gpointer);
+gboolean on_connection_dialog_close (GtkWidget*, GdkEvent*, gpointer);
 
 gboolean on_table_button_press (GtkWidget*, GdkEventButton*, gpointer);
 gboolean on_table_popup_menu   (GtkWidget*, gpointer);
