@@ -1,3 +1,8 @@
+2005-04-12  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* main.c, callbacks.[ch]: forgot to handle "delete-event" for the
+	interface configuration dialog. Very possibly fixes #300226
+
 2005-04-12  Stanislav Brabec  <sbrabec@suse.cz>
 
 	* address-list.c: fix a gcc 4.0 compile warning. Fixes #172932
